# locusum-ingestor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_crawlers.sh  scrapy.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_request.md  feature_request.md  other.md
.github/instructions/: commit_instruction.instructions.md  copilot-instructions.md
docs/: ARCHITECTURE.md  CRAWLING_POLICY.md  DEV_LOG.md  TASK_05_ai_integration.md  TASK_06_google_ai_integration.md  TESTING.md  USAGE.md
locusum_ingestor/: ai_worker.py  database.py  items.py  main.py  middlewares.py  pipelines.py  runner.py  settings.py  worker.py
locusum_ingestor/models/: main_db.py
locusum_ingestor/processor/: extractor.py
locusum_ingestor/scripts/: list_models.py  reset_ai_fields.py
locusum_ingestor/services/: ai_service.py
locusum_ingestor/spiders/: community_impact.py  dallas_news.py  houston_chronicle.py  news_spider.py  texas_tribune.py
tests/: conftest.py  test_database.py  test_pipeline.py  test_spiders.py
