[project]
name = "locusum_ingestor"
version = "0.1.0"
description = "Ingestion Layer for LocuSum Project"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.11.0",
    "scrapy-playwright>=0.0.33",
    "sqlmodel>=0.0.14",
    "loguru>=0.7.2",
    "playwright>=1.40.0",
]

[tool.setuptools]
packages = ["locusum_ingestor"]